Change sync schedule to daily at 23:00 UTC
Updated cron schedule to run every day at 23:00 UTC.

--- a/.github/workflows/sync_leetcode.yml
+++ b/.github/workflows/sync_leetcode.yml
@@ -3,7 +3,7 @@ name: Sync Leetcode
 on:
   workflow_dispatch:      # Allows you to run the sync manually
   schedule:
-    - cron: "0 8 * * 6"    # Runs automatically every Saturday at 8:00 AM UTC
+    - cron: "0 23 * * *"    # Runs automatically every Saturday at 8:00 AM UTC
 
 jobs:
   build:
